# cpu_emulator

./: .gitignore  README.md  main.py  pyproject.toml
cpu_emulator/: gui.py
cpu_emulator/core/: alu.py  cpu.py  decoder.py  exceptions.py  flags.py  instruction_set.py  memory.py  program_loader.py  registers.py
cpu_emulator/utils/: demo_programs.py  logger_config.py
tests/: conftest.py
tests/test_core/: conftest.py  test_alu.py  test_flags.py  test_memory.py  test_registers.py
